[gd_scene load_steps=3 format=3 uid="uid://c3d4e5f6g7h8i"]

[ext_resource type="Script" path="res://pause_menu.gd" id="1_pause_menu"]
[ext_resource type="Script" path="res://volume_slider.gd" id="2_volume_slider"]

[node name="PauseMenu" type="Control"]
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_pause_menu")

[node name="DarkBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="PausePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0

[node name="PauseContainer" type="VBoxContainer" parent="PausePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="PauseTitle" type="Label" parent="PausePanel/PauseContainer"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="PausePanel/PauseContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="PauseButtons" type="VBoxContainer" parent="PausePanel/PauseContainer"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="PausePanel/PauseContainer/PauseButtons"]
layout_mode = 2
custom_minimum_size = Vector2(0, 45)
text = "RESUME"

[node name="RestartButton" type="Button" parent="PausePanel/PauseContainer/PauseButtons"]
layout_mode = 2
custom_minimum_size = Vector2(0, 45)
text = "RESTART"

[node name="SettingsButton" type="Button" parent="PausePanel/PauseContainer/PauseButtons"]
layout_mode = 2
custom_minimum_size = Vector2(0, 45)
text = "SETTINGS"

[node name="MainMenuButton" type="Button" parent="PausePanel/PauseContainer/PauseButtons"]
layout_mode = 2
custom_minimum_size = Vector2(0, 45)
text = "MAIN MENU"

[node name="Spacer2" type="Control" parent="PausePanel/PauseContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ControlsHint" type="Label" parent="PausePanel/PauseContainer"]
layout_mode = 2
text = "Press ESC or P to Resume"
horizontal_alignment = 1

[node name="SettingsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0

[node name="SettingsContainer" type="VBoxContainer" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="SettingsTitle" type="Label" parent="SettingsPanel/SettingsContainer"]
layout_mode = 2
text = "SETTINGS"
horizontal_alignment = 1

[node name="Spacer3" type="Control" parent="SettingsPanel/SettingsContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="VolumeContainer" type="HBoxContainer" parent="SettingsPanel/SettingsContainer"]
layout_mode = 2

[node name="VolumeLabel" type="Label" parent="SettingsPanel/SettingsContainer/VolumeContainer"]
layout_mode = 2
text = "Volume:"

[node name="VolumeSlider" type="HSlider" parent="SettingsPanel/SettingsContainer/VolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 100.0
step = 1.0
value = 100.0
script = ExtResource("2_volume_slider")

[node name="FullscreenCheckbox" type="CheckBox" parent="SettingsPanel/SettingsContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="Spacer4" type="Control" parent="SettingsPanel/SettingsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="SettingsPanel/SettingsContainer"]
layout_mode = 2
text = "BACK"

[connection signal="pressed" from="PausePanel/PauseContainer/PauseButtons/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PausePanel/PauseContainer/PauseButtons/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="PausePanel/PauseContainer/PauseButtons/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="PausePanel/PauseContainer/PauseButtons/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="value_changed" from="SettingsPanel/SettingsContainer/VolumeContainer/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="toggled" from="SettingsPanel/SettingsContainer/FullscreenCheckbox" to="." method="_on_fullscreen_checkbox_toggled"]
[connection signal="pressed" from="SettingsPanel/SettingsContainer/BackButton" to="." method="_on_back_button_pressed"]